# web-transcribation

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  tests.py  transcribation.py
.github/workflows/: python-app.yml
