[project]
name = "web-transcribation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "setuptools>=78.1.0",
    "setuptools-rust>=1.11.1",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
